--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
             src="hero-1920_aylsqe_c_scale,w_1920.png"
             alt="Main Flavor Hero">
         </section>
-
-        <section id="main-flavor" class="grid-con">
+        <section class="col-span-full">
+        <h2>Our Flavor</h2>
+        <div id="main-flavor" class="col-span-full">
             <div class="flavor-container" id="fla-mango">
                 <img src="images/Flavor-mango-600.png" alt="Mango Maple Tea" >
                 <h3>Mango Maple Tea</h3>
@@ -170,7 +171,7 @@
                     <img src="images/moreinfo-300.png" alt="Product More Info" class="pdt-more">
                 </a>
             </div>
-
+        </div>
         </section>
 
     <!-- Lightbox for Bubble-O -->
