--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             alt="Main Flavor Hero">
         </section>
         <section class="col-span-full">
-        <h2>Our Flavor</h2>
+        <h2>Orbitz's Flavor</h2>
         <div id="main-flavor" class="col-span-full">
             <div class="flavor-container" id="fla-mango">
                 <img src="images/Flavor-mango-600.png" alt="Mango Maple Tea" >
