--- a/index.html
+++ b/index.html
@@ -174,24 +174,26 @@
         </div>
         </section>
 
-    <!-- Lightbox for Bubble-O -->
-    <section id="lightbox" class="hidden">
-        <div id="lightbox-content">
-          <img src="images/lightbox-800.png" alt="Lightbox Image" id="lightbox-image">
-          <h3 id="lightbox-title">Orbitz Secret</h3>
-          <img src="images/icon-close.png" alt="Close" id="lightbox-close">
-        </div>
-    </section>
+<!-- Bubble-O Lightbox -->
+<div id="lightbox" class="lightbox-overlay">
+    <div id="lightbox-content">
+        <img id="lightbox-image" src="" alt="Lightbox Image">
+        <h3></h3>
+        <p></p>
+        <img id="lightbox-close" src="images/icon-close.png" alt="Close Button">
+    </div>
+</div>
 
-    <!-- Lightbox for Product Promotion -->
-    <section id="pdt-lightbox" class="lightbox-overlay hidden">
-        <h3 class="hidden">Promotion $2</h3>
-        <div id="pdt-lightbox-content" class="lightbox-content">
-            <img src="images/promotion-800.png" alt="PDT Lightbox Image" id="pdt-lightbox-image">
-            <h3 id="pdt-lightbox-title">Enjoy Now</h3>
-            <img src="images/icon-close.png" alt="Close" id="pdt-lightbox-close" class="close-button">
-        </div>
-    </section>
+<!-- Promotion Lightbox -->
+<div id="pdt-lightbox" class="lightbox-overlay">
+    <div id="pdt-lightbox-content">
+        <img id="pdt-lightbox-image" src="" alt="Lightbox Image">
+        <h3 id="pdt-lightbox-title"></h3>
+        <p></p>
+        <img id="pdt-lightbox-close" src="images/icon-close.png" alt="Close Button">
+    </div>
+</div>
+
 
 
     <footer class="footer">
