--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <section class="grid-con">
             <div class="col-span-full" id="main-about">
                 <h2>About Orbitz</h2>
-                <video controls>
-                    <source src="videos/history.mp4" type="video/mp4">
+                <video controls autoplay loop muted>
+                    <source src="videos/orbitz-commercial.mp4" type="video/mp4">
                 </video>
                 <p>Orbitz is a unique and refreshing beverage brand known for its 
                     innovative blend of flavors and textures. The drink features 
