Update the sticky icon and header footer
In this commit was updated the sticky icon and header footer

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <section id="bubble-O">
             <h2 class="hidden">Bubble O</h2>
-            <img src="images/bubble-o.png" alt="Bubble O">
+            <img src="images/bubby-mango.png" alt="Bubble O">
         </section>
     </main>
 
