--- a/product.html
+++ b/product.html
@@ -91,7 +91,7 @@
 
         <section id="bubble-O">
             <h2 class="hidden">Bubble O</h2>
-            <img src="images/bubble-o.png" alt="Bubble O">
+            <img src="images/buddy-peach.png" alt="Bubble O">
         </section>
 </main>
     
