--- a/about-us.html
+++ b/about-us.html
@@ -71,7 +71,7 @@
 
         <section id="bubble-O">
             <h2 class="hidden">Bubble O</h2>
-            <img src="images/bubble-o.png" alt="Bubble O">
+            <img src="images/buddy-lychee.png" alt="Bubble O">
         </section>
   
         <section  class="grid-con">
