Update the background and font size of desktop nav
In this commit was updated the background and desktop nav font size

also made the linkage of product - More info and index page

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="flavor-container" id="fla-mango">
                 <img src="images/Flavor-mango-600.png" alt="Mango Maple Tea" >
                 <h3>Mango Maple Tea</h3>
-                <a href="product.html">
+                <a href="product.html#mango-pdt">
                     <img src="images/moreinfo-300.png" alt="Product More Info" class="pdt-more">
                 </a>
             </div>
@@ -159,7 +159,7 @@
             <div class="flavor-container" id="fla-lychee">
                 <img src="images/Flavor-lychee-600.png" alt="Lychee Maple Tea" >
                 <h3>Lychee Maple Tea</h3>
-                <a href="product.html">
+                <a href="product.html#lychee-pdt">
                     <img src="images/moreinfo-300.png" alt="Product More Info" class="pdt-more">
                 </a>
             </div>
@@ -167,7 +167,7 @@
             <div class="flavor-container" id="fla-peach">
                 <img src="images/Flavor-peach-600.png" alt="Lychee Maple Tea" >
                 <h3>Peach Maple Tea</h3>
-                <a href="product.html">
+                <a href="product.html#peach-pdt">
                     <img src="images/moreinfo-300.png" alt="Product More Info" class="pdt-more">
                 </a>
             </div>
