--- a/product.html
+++ b/product.html
@@ -202,25 +202,25 @@
         </div>
     </section>
 
-           <!-- Bubble-O Lightbox -->
-           <div id="lightbox" class="lightbox-overlay">
-            <div id="lightbox-content">
-                <img id="lightbox-image" src="" alt="Lightbox Image">
-                <h3></h3>
-                <p></p>
-                <img id="lightbox-close" src="images/icon-close.png" alt="Close Button">
+            <!-- Bubble-O Lightbox -->
+            <div id="lightbox" class="lightbox-overlay">
+                <div id="lightbox-content" class="lightbox-content">
+                    <img id="lightbox-image" class="lightbox-image" src="" alt="Lightbox Image">
+                    <h3></h3>
+                    <p></p>
+                    <img id="lightbox-close" class="lightbox-close" src="images/icon-close.png" alt="Close Button">
+                </div>
             </div>
-        </div>
 
-        <!-- Promotion Lightbox -->
-        <div id="pdt-lightbox" class="lightbox-overlay">
-            <div id="pdt-lightbox-content">
-                <img id="pdt-lightbox-image" src="" alt="Lightbox Image">
-                <h3 id="pdt-lightbox-title"></h3>
-                <p></p>
-                <img id="pdt-lightbox-close" src="images/icon-close.png" alt="Close Button">
+            <!-- Promotion Lightbox -->
+            <div id="pdt-lightbox" class="lightbox-overlay">
+                <div id="pdt-lightbox-content" class="lightbox-content">
+                    <img id="pdt-lightbox-image" class="lightbox-image" src="" alt="Lightbox Image">
+                    <h3 id="pdt-lightbox-title"></h3>
+                    <p></p>
+                    <img id="pdt-lightbox-close" class="lightbox-close" src="images/icon-close.png" alt="Close Button">
+                </div>
             </div>
-        </div>
 
     <footer class="footer">
         <h2 class="hidden">Footer</h2>
