Text color amend
In this commit was revised some text color.

--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
         </section>
 
         <section class="grid-con">
-            <div class="col-span-full" id="o-background">
+            <div class="col-span-full t-col-start-2 t-col-end-12" id="o-background">
                 <h3 class="hidden"> Orbitz Background </h3>
                 <video controls>
                     <source src="videos/history.mp4" type="video/mp4">
                 </video>
-                <a href="about-us.html">
+                <a href="about-us.html#history">
                     <img src="images/moreinfo-300.png" alt="moreinfo-300" id="h-more-info">
                 </a>
             </div>
