Updated the banner image
In this commit was updated the banner images for all pages.

--- a/about-us.html
+++ b/about-us.html
@@ -63,10 +63,24 @@
     </div>
 
     <main>
-        <div id="about-hero" class="full-width-grid-con">
-            <video controls autoplay loop muted>
-                <source src="videos/about-us.mp4" type="video/mp4">
-            </video>
+        <div id="main-about" class="full-width-grid-con">
+            <img
+            sizes="(max-width: 1920px) 100vw, 1920px"
+            srcset="
+            images/about-1_ltkxre_c_scale,w_190.png 190w,
+            images/about-1_ltkxre_c_scale,w_540.png 540w,
+            images/about-1_ltkxre_c_scale,w_766.png 766w,
+            images/about-1_ltkxre_c_scale,w_945.png 945w,
+            images/about-1_ltkxre_c_scale,w_1131.png 1131w,
+            images/about-1_ltkxre_c_scale,w_1269.png 1269w,
+            images/about-1_ltkxre_c_scale,w_1388.png 1388w,
+            images/about-1_ltkxre_c_scale,w_1531.png 1531w,
+            images/about-1_ltkxre_c_scale,w_1637.png 1637w,
+            images/about-1_ltkxre_c_scale,w_1749.png 1749w,
+            images/about-1_ltkxre_c_scale,w_1840.png 1840w,
+            images/about-1_ltkxre_c_scale,w_1920.png 1920w"
+            src="about-1_ltkxre_c_scale,w_1920.png"
+            alt="About Hero Image">
         </div>
 
         <section id="bubble-O">
