--- a/contact.html
+++ b/contact.html
@@ -67,25 +67,21 @@
         <section id="contact-hero" class="full-width-grid-con">
             <h2 class="hidden">Contact Us Image</h2>
             <img
-            sizes="100vw"
+            sizes="(max-width: 1920px) 100vw, 1920px"
             srcset="
-            images/banner-1920_peukog_c_scale,w_190.png 190w,
-            images/banner-1920_peukog_c_scale,w_474.png 474w,
-            images/banner-1920_peukog_c_scale,w_663.png 663w,
-            images/banner-1920_peukog_c_scale,w_832.png 832w,
-            images/banner-1920_peukog_c_scale,w_957.png 957w,
-            images/banner-1920_peukog_c_scale,w_1086.png 1086w,
-            images/banner-1920_peukog_c_scale,w_1180.png 1180w,
-            images/banner-1920_peukog_c_scale,w_1293.png 1293w,
-            images/banner-1920_peukog_c_scale,w_1375.png 1375w,
-            images/banner-1920_peukog_c_scale,w_1484.png 1484w,
-            images/banner-1920_peukog_c_scale,w_1553.png 1553w,
-            images/banner-1920_peukog_c_scale,w_1633.png 1633w,
-            images/banner-1920_peukog_c_scale,w_1729.png 1729w,
-            images/banner-1920_peukog_c_scale,w_1797.png 1797w,
-            images/banner-1920_peukog_c_scale,w_1862.png 1862w,
-            images/banner-1920_peukog_c_scale,w_1920.png 1920w"
-            src="banner-1920_peukog_c_scale,w_1920.png"
+            images/contact-1_k0s6fo_c_scale,w_190.png 190w,
+            images/contact-1_k0s6fo_c_scale,w_537.png 537w,
+            images/contact-1_k0s6fo_c_scale,w_758.png 758w,
+            images/contact-1_k0s6fo_c_scale,w_947.png 947w,
+            images/contact-1_k0s6fo_c_scale,w_1099.png 1099w,
+            images/contact-1_k0s6fo_c_scale,w_1254.png 1254w,
+            images/contact-1_k0s6fo_c_scale,w_1411.png 1411w,
+            images/contact-1_k0s6fo_c_scale,w_1520.png 1520w,
+            images/contact-1_k0s6fo_c_scale,w_1629.png 1629w,
+            images/contact-1_k0s6fo_c_scale,w_1752.png 1752w,
+            images/contact-1_k0s6fo_c_scale,w_1844.png 1844w,
+            images/contact-1_k0s6fo_c_scale,w_1920.png 1920w"
+            src="contact-1_k0s6fo_c_scale,w_1920.png"
             alt="Contact Hero Image">
         </section>
 
@@ -122,6 +118,7 @@
                     </form>
             </div>
     </section>
+   
 </main>
 
     <!-- Bubble-O Lightbox -->
