--- a/index.html
+++ b/index.html
@@ -129,20 +129,22 @@
             <img
             sizes="(max-width: 1920px) 100vw, 1920px"
             srcset="
-            images/hero-1920_aylsqe_c_scale,w_190.png 190w,
-            images/hero-1920_aylsqe_c_scale,w_508.png 508w,
-            images/hero-1920_aylsqe_c_scale,w_744.png 744w,
-            images/hero-1920_aylsqe_c_scale,w_905.png 905w,
-            images/hero-1920_aylsqe_c_scale,w_1046.png 1046w,
-            images/hero-1920_aylsqe_c_scale,w_1193.png 1193w,
-            images/hero-1920_aylsqe_c_scale,w_1311.png 1311w,
-            images/hero-1920_aylsqe_c_scale,w_1429.png 1429w,
-            images/hero-1920_aylsqe_c_scale,w_1534.png 1534w,
-            images/hero-1920_aylsqe_c_scale,w_1632.png 1632w,
-            images/hero-1920_aylsqe_c_scale,w_1736.png 1736w,
-            images/hero-1920_aylsqe_c_scale,w_1843.png 1843w,
-            images/hero-1920_aylsqe_c_scale,w_1920.png 1920w"
-            src="hero-1920_aylsqe_c_scale,w_1920.png"
+            images/main-2_pxwy7c_c_scale,w_190.png 190w,
+            images/main-2_pxwy7c_c_scale,w_475.png 475w,
+            images/main-2_pxwy7c_c_scale,w_670.png 670w,
+            images/main-2_pxwy7c_c_scale,w_819.png 819w,
+            images/main-2_pxwy7c_c_scale,w_949.png 949w,
+            images/main-2_pxwy7c_c_scale,w_1084.png 1084w,
+            images/main-2_pxwy7c_c_scale,w_1186.png 1186w,
+            images/main-2_pxwy7c_c_scale,w_1292.png 1292w,
+            images/main-2_pxwy7c_c_scale,w_1422.png 1422w,
+            images/main-2_pxwy7c_c_scale,w_1495.png 1495w,
+            images/main-2_pxwy7c_c_scale,w_1508.png 1508w,
+            images/main-2_pxwy7c_c_scale,w_1781.png 1781w,
+            images/main-2_pxwy7c_c_scale,w_1812.png 1812w,
+            images/main-2_pxwy7c_c_scale,w_1867.png 1867w,
+            images/main-2_pxwy7c_c_scale,w_1920.png 1920w"
+            src="main-2_pxwy7c_c_scale,w_1920.png"
             alt="Main Flavor Hero">
         </section>
         <section class="col-span-full">
