--- a/product.html
+++ b/product.html
@@ -67,25 +67,21 @@
         <section id="pdt-hero" class="full-width-grid-con">
             <h2 class="hidden">Main Product Hero</h2>
             <img
-            sizes="100vw"
+            sizes="(max-width: 1920px) 100vw, 1920px"
             srcset="
-            images/pdt-banner-1920_xeasfm_c_scale,w_190.png 190w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_494.png 494w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_714.png 714w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_861.png 861w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_997.png 997w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1108.png 1108w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1229.png 1229w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1333.png 1333w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1436.png 1436w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1527.png 1527w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1609.png 1609w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1688.png 1688w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1769.png 1769w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1875.png 1875w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1910.png 1910w,
-            images/pdt-banner-1920_xeasfm_c_scale,w_1920.png 1920w"
-            src="pdt-banner-1920_xeasfm_c_scale,w_1920.png"
+            images/product-1_ihfjqh_c_scale,w_190.png 190w,
+            images/product-1_ihfjqh_c_scale,w_527.png 527w,
+            images/product-1_ihfjqh_c_scale,w_747.png 747w,
+            images/product-1_ihfjqh_c_scale,w_930.png 930w,
+            images/product-1_ihfjqh_c_scale,w_1102.png 1102w,
+            images/product-1_ihfjqh_c_scale,w_1241.png 1241w,
+            images/product-1_ihfjqh_c_scale,w_1373.png 1373w,
+            images/product-1_ihfjqh_c_scale,w_1506.png 1506w,
+            images/product-1_ihfjqh_c_scale,w_1612.png 1612w,
+            images/product-1_ihfjqh_c_scale,w_1732.png 1732w,
+            images/product-1_ihfjqh_c_scale,w_1826.png 1826w,
+            images/product-1_ihfjqh_c_scale,w_1920.png 1920w"
+            src="product-1_ihfjqh_c_scale,w_1920.png"
             alt="Product Hero Image">
         </section>
 
