Update Commercial Video
In this commit, a new commercial video was added.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="col-span-full" id="main-about">
                 <h2>About Orbitz</h2>
                 <video controls autoplay loop muted>
-                    <source src="videos/Orbitz Commercial.mp4" type="video/mp4">
+                    <source src="videos/orbitz_commercial.mp4" type="video/mp4">
                 </video>
                 <p>Orbitz is a unique and refreshing beverage brand known for its 
                     innovative blend of flavors and textures. The drink features 
