Update banner and the sticky icon
In this commit was updated the banner and the sticky icon.

--- a/about-us.html
+++ b/about-us.html
@@ -122,24 +122,19 @@
         <section id="brand-new-flavor" class="full-width-grid-con">
             <h2 class="hidden">Brand New Flavor</h2>
             <img
-            sizes="100vw"
+            sizes="(max-width: 1920px) 100vw, 1920px"
             srcset="
-            images/about-hero-2_g6cph5_c_scale,w_190.png 190w,
-            images/about-hero-2_g6cph5_c_scale,w_334.png 334w,
-            images/about-hero-2_g6cph5_c_scale,w_445.png 445w,
-            images/about-hero-2_g6cph5_c_scale,w_540.png 540w,
-            images/about-hero-2_g6cph5_c_scale,w_623.png 623w,
-            images/about-hero-2_g6cph5_c_scale,w_702.png 702w,
-            images/about-hero-2_g6cph5_c_scale,w_774.png 774w,
-            images/about-hero-2_g6cph5_c_scale,w_843.png 843w,
-            images/about-hero-2_g6cph5_c_scale,w_907.png 907w,
-            images/about-hero-2_g6cph5_c_scale,w_969.png 969w,
-            images/about-hero-2_g6cph5_c_scale,w_1028.png 1028w,
-            images/about-hero-2_g6cph5_c_scale,w_1085.png 1085w,
-            images/about-hero-2_g6cph5_c_scale,w_1142.png 1142w,
-            images/about-hero-2_g6cph5_c_scale,w_1198.png 1198w,
-            images/about-hero-2_g6cph5_c_scale,w_1200.png 1200w"
-            src="about-hero-2_g6cph5_c_scale,w_1200.png"
+            images/about-2_yuodre_c_scale,w_190.png 190w,
+            images/about-2_yuodre_c_scale,w_583.png 583w,
+            images/about-2_yuodre_c_scale,w_856.png 856w,
+            images/about-2_yuodre_c_scale,w_1065.png 1065w,
+            images/about-2_yuodre_c_scale,w_1222.png 1222w,
+            images/about-2_yuodre_c_scale,w_1401.png 1401w,
+            images/about-2_yuodre_c_scale,w_1556.png 1556w,
+            images/about-2_yuodre_c_scale,w_1693.png 1693w,
+            images/about-2_yuodre_c_scale,w_1827.png 1827w,
+            images/about-2_yuodre_c_scale,w_1920.png 1920w"
+            src="about-2_yuodre_c_scale,w_1920.png"
             alt="Brand New Flavor Hero">
         </section>
 
