--- a/index.html
+++ b/index.html
@@ -129,23 +129,19 @@
             <img
             sizes="(max-width: 1920px) 100vw, 1920px"
             srcset="
-            images/main-2_pxwy7c_c_scale,w_190.png 190w,
-            images/main-2_pxwy7c_c_scale,w_475.png 475w,
-            images/main-2_pxwy7c_c_scale,w_670.png 670w,
-            images/main-2_pxwy7c_c_scale,w_819.png 819w,
-            images/main-2_pxwy7c_c_scale,w_949.png 949w,
-            images/main-2_pxwy7c_c_scale,w_1084.png 1084w,
-            images/main-2_pxwy7c_c_scale,w_1186.png 1186w,
-            images/main-2_pxwy7c_c_scale,w_1292.png 1292w,
-            images/main-2_pxwy7c_c_scale,w_1422.png 1422w,
-            images/main-2_pxwy7c_c_scale,w_1495.png 1495w,
-            images/main-2_pxwy7c_c_scale,w_1508.png 1508w,
-            images/main-2_pxwy7c_c_scale,w_1781.png 1781w,
-            images/main-2_pxwy7c_c_scale,w_1812.png 1812w,
-            images/main-2_pxwy7c_c_scale,w_1867.png 1867w,
-            images/main-2_pxwy7c_c_scale,w_1920.png 1920w"
-            src="main-2_pxwy7c_c_scale,w_1920.png"
-            alt="Main Flavor Hero">
+            images/main-2_ilhlrk_c_scale,w_190.png 190w,
+            images/main-2_ilhlrk_c_scale,w_557.png 557w,
+            images/main-2_ilhlrk_c_scale,w_800.png 800w,
+            images/main-2_ilhlrk_c_scale,w_1003.png 1003w,
+            images/main-2_ilhlrk_c_scale,w_1164.png 1164w,
+            images/main-2_ilhlrk_c_scale,w_1299.png 1299w,
+            images/main-2_ilhlrk_c_scale,w_1476.png 1476w,
+            images/main-2_ilhlrk_c_scale,w_1598.png 1598w,
+            images/main-2_ilhlrk_c_scale,w_1708.png 1708w,
+            images/main-2_ilhlrk_c_scale,w_1821.png 1821w,
+            images/main-2_ilhlrk_c_scale,w_1920.png 1920w"
+            src="main-2_ilhlrk_c_scale,w_1920.png"
+            alt="Main Flavor Hero">"
         </section>
         <section class="col-span-full">
         <h2>Orbitz's Flavor</h2>
