--- a/product.html
+++ b/product.html
@@ -136,17 +136,21 @@
     <section id="flavor-hero" class="full-width-grid-con">
         <h2 class="hidden">Flavor Hero</h2>
         <img
-        sizes="100vw"
+        sizes="(max-width: 1920px) 100vw, 1920px"
         srcset="
-        images/product-hero-2_jorpqx_c_scale,w_190.png 190w,
-        images/product-hero-2_jorpqx_c_scale,w_454.png 454w,
-        images/product-hero-2_jorpqx_c_scale,w_646.png 646w,
-        images/product-hero-2_jorpqx_c_scale,w_788.png 788w,
-        images/product-hero-2_jorpqx_c_scale,w_919.png 919w,
-        images/product-hero-2_jorpqx_c_scale,w_1035.png 1035w,
-        images/product-hero-2_jorpqx_c_scale,w_1142.png 1142w,
-        images/product-hero-2_jorpqx_c_scale,w_1200.png 1200w"
-        src="product-hero-2_jorpqx_c_scale,w_1200.png"
+        images/product-2_e4dy59_c_scale,w_190.png 190w,
+        images/product-2_e4dy59_c_scale,w_561.png 561w,
+        images/product-2_e4dy59_c_scale,w_796.png 796w,
+        images/product-2_e4dy59_c_scale,w_1010.png 1010w,
+        images/product-2_e4dy59_c_scale,w_1171.png 1171w,
+        images/product-2_e4dy59_c_scale,w_1323.png 1323w,
+        images/product-2_e4dy59_c_scale,w_1446.png 1446w,
+        images/product-2_e4dy59_c_scale,w_1567.png 1567w,
+        images/product-2_e4dy59_c_scale,w_1681.png 1681w,
+        images/product-2_e4dy59_c_scale,w_1793.png 1793w,
+        images/product-2_e4dy59_c_scale,w_1867.png 1867w,
+        images/product-2_e4dy59_c_scale,w_1920.png 1920w"
+        src="product-2_e4dy59_c_scale,w_1920.png"
         alt="Flavor Hero">
     </section>
 
